fix(client): make progress bar in course cards aligned (#557)

--- a/judgels-client/src/styles/index.scss
+++ b/judgels-client/src/styles/index.scss
@@ -96,6 +96,7 @@ h5 {
 hr {
   margin-top: 15px !important;
   margin-bottom: 15px !important;
+  width: 100%;
 
   border: none;
   border-bottom: 1px solid rgba($text-color, 0.15);
